# GDK

./: .gitignore  CHANGELOG.md  Cargo.toml  ENTERPRISE.md  INSTALL.md  README.md  SECURITY.md  demo_tree.html  demo_tree.txt  demo_tree_actual.txt  gdk_tree_demo.html  generate_demo.rs
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
benches/: advanced_benchmarks.rs  performance_benchmarks.rs
src/: agent.rs  convergence.rs  core.rs  errors.rs  git.rs  lib.rs  performance.rs  quality_metrics.rs  threads.rs  validation.rs  visualization.rs
tests/: integration_tests.rs  property_tests.rs  unit_tests.rs
