[package]
name = "gdk"
version = "0.1.0"
edition = "2021"
description = "Git Workflow Deep Knowledge system for AI agents"

[dependencies]
git2 = "0.19"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
petgraph = "0.6"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies.clap]
version = "4.0"
features = ["derive"]

[lib]
name = "gdk"
path = "src/lib.rs"

[[bin]]
name = "gdk-cli"
path = "src/bin/main.rs"

[[bin]]
name = "generate_demo"
path = "generate_demo.rs"