[package]
name = "gdk"
version = "1.0.0"
edition = "2021"
description = "Enterprise-ready Git Workflow Deep Knowledge system for AI agents with infinite monkey theorem convergence"
authors = ["GDK Team <team@gdk.dev>"]
license = "MIT"
repository = "https://github.com/KooshaPari/GDK"
homepage = "https://github.com/KooshaPari/GDK"
documentation = "https://docs.rs/gdk"
keywords = ["git", "workflow", "ai", "agents", "enterprise"]
categories = ["development-tools", "command-line-utilities", "algorithms"]
readme = "README.md"
exclude = ["screenshots/*", "demo*", "target/*"]

[dependencies]
git2 = "0.19"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
petgraph = "0.6"
thiserror = "2.0"

# Performance optimization dependencies
rayon = "1.8"           # Parallel processing for large repositories
dashmap = "6.1"          # Concurrent hash maps for thread safety
tokio-util = "0.7"       # Additional async utilities
bytes = "1.5"            # Efficient byte buffer operations
smallvec = "1.11"        # Stack-allocated vectors for small collections
hashbrown = "0.15"       # Fast hash map implementation
once_cell = "1.19"       # Lazy static initialization
parking_lot = "0.12"     # High-performance synchronization primitives
memchr = "2.6"           # Optimized string searching
simd-json = "0.13"       # SIMD-accelerated JSON parsing
num_cpus = "1.16"         # CPU core detection for optimal parallelism

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }  # Profiling support

[dependencies.clap]
version = "4.0"
features = ["derive"]

[lib]
name = "gdk"
path = "src/lib.rs"

[[bin]]
name = "gdk-cli"
path = "src/bin/main.rs"

[[bin]]
name = "generate_demo"
path = "generate_demo.rs"

# Performance optimization profiles
[profile.release]
codegen-units = 1        # Better optimization with single codegen unit
lto = true               # Link-time optimization
panic = "abort"          # Smaller binary size, faster panics
strip = true             # Strip debug symbols from release builds

[profile.bench]
inherits = "release"
debug = true             # Keep debug info for profiling

# Workspace optimization
[workspace]
members = ["."]